<resources>
    <string name="app_name">SQL</string>
    <string name="title_main_with_user">记事本 - %1$s</string>
    <string name="label_note_hint">请输入内容，可保存到文件或数据库</string>
    <string name="hint_enter_text">在这里输入你的日记、备忘录或想法...</string>
    <string name="btn_save_file">保存到文件</string>
    <string name="btn_load_file">从文件加载</string>
    <string name="btn_save_record">保存为记录</string>
    <string name="label_auto_save">自动保存账户密码</string>
    <string name="hint_user_name">用户昵称</string>
    <string name="hint_password">密码</string>
    <string name="btn_save_settings">保存设置</string>
    <string name="btn_login_jump">Login</string>
    <string name="text_empty_list">还没有任何记录，快去保存一条吧！</string>
    <string name="btn_delete_record">删除该记录</string>
    <string name="menu_settings">设置</string>
    <string name="menu_records">记录列表</string>
    <string name="tip_saved_to_file">已保存到 note.txt</string>
    <string name="tip_loaded_from_file">已从 note.txt 加载</string>
    <string name="tip_saved_to_db">记录已写入数据库</string>
    <string name="tip_record_deleted">记录已删除</string>
    <string name="tip_settings_saved">设置已保存</string>
    <string name="error_file_missing">文件不存在，先保存再试试</string>
    <string name="error_save_file">保存失败：%1$s</string>
    <string name="error_load_file">读取失败：%1$s</string>
    <string name="error_empty_content">内容为空，无法保存记录</string>
    <string name="error_save_db">写入数据库失败</string>
    <string name="error_record_not_found">未找到该记录</string>
    <string name="error_delete_failed">删除失败，请重试</string>
</resources>